# supertree

./: Cargo.toml  README.md  build.rs  justfile
.github/workflows/: coverage.yml  rust.yml
src/: cli.rs  lib.rs  main.rs  tasks.rs  worktree.rs
src/tasks/: files.rs  shell.rs
src/worktree/: fs.rs
tests/: integration_test.rs
tests/common/: mod.rs
