[package]
name = "supertree"
version = "0.1.0"
edition = "2021"
description = "Supercharged git worktree wrapper for a better DX"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["wrap_help", "derive"] }
color-eyre = "0.6.2"
git2 = "0.17.1"
