[package]
name = "supertree"
version = "0.1.0"
edition = "2021"
description = "Supercharged git worktree wrapper for a better DX"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["wrap_help", "derive"] }
color-eyre = "0.6.2"
directories = "5.0.1"
git2 = "0.18.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"

[build-dependencies]
clap = { version = "4.3.2", features = ["derive", "wrap_help"] }
clap_complete = "4.3.1"
